# HATS-CPP

./: .gitignore  CMakeLists.txt  Readme.md  build.sh
doc/dataset/translations_data/: sms_translations.csv  sms_translations.xlsx
include/: config.h  preprocessing.h
src/: Fasttext.cpp  config.cpp  datasethandler.cpp  main.cpp  preprocessing.cpp
src/ft/: CMakeLists.txt
src/ml/: CMakeLists.txt
src/ml/include/: ml_utils.h  nnet.h
src/ml/src/: ml_utils.cpp  nnet.cpp
src/preprocessing/: CMakeLists.txt
src/preprocessing/include/: config.h  datasethandler.h  embedding.h  pre_utils.h  preprocessing.h  utils.h
src/preprocessing/src/: datasethandler.cpp  embedding.cpp  preprocessing.cpp
